# Generative-AI

./: .gitignore  README.md  pyproject.toml  requirements.txt
0-AI-ML-Basics/: Readme.md
0-AI-ML-Basics/1-AI/: Readme.md
0-AI-ML-Basics/1-ML/: Readme.md
0-AI-ML-Basics/2-DL/: Readme.md
0-AI-ML-Basics/2-ML/: Readme.md
0-AI-ML-Basics/3-Data-Science/: Readme.md
0-AI-ML-Basics/AGI/: Readme.md
1-Gen-AI/: Readme.md  llms-difference.md
1-Gen-AI/2-prompt-engineering/: Readme.md
1-Gen-AI/2A-Gen-AI-Project-Lifecycle/: Readme.md
1-Gen-AI/Assistants-and-Agents/: README.md
1-Gen-AI/Assistants-vs-Agents/: README.md
1-Gen-AI/RAG-vs-Fine-tuning/: README.md
1-Gen-AI/function-calling/: Readme.md
1-LLMS/: Readme.md
2-ChatGPT/: Readme.md
2-ChatGPT/2-multiple-roles/: multiple_roles.ipynb
2-ChatGPT/4-json-mode/: Readme.md  json_mode.ipynb
2-ChatGPT/7-Fine-tunning/: Readme.md  app.ipynb
2-ChatGPT/GPT-actions/: README.md
2-prompt-engineering/: Readme.md
2A-Gen-AI/: Readme.md
3-ChatGPT/: Readme.md
3-Hugging-face/: Hugging_face_intro.ipynb  Readme.md
3-numpy/: Readme.md  numpy.ipynb  start.ipynb
4-Hugging-face/: Hugging_face_intro.ipynb  Readme.md
4-numpy/: Readme.md  numpy.ipynb
4-pandas/: 1-pandas-start.ipynb  2-table-operations.ipynb  PIAIC-Students.csv  Readme.md  pandas-2nd.ipynb  pandas-start.ipynb  result_card.csv  student.csv  students.html  table-operations.ipynb  table.html
5-Streamlit/: Readme.md
5-pandas/: Readme.md  student.csv
6-SQLalchamy/: GPT.md  Readme.md  sql_orm.py
7-FastAPI/: Readme.md
8-Microservices/: Readme.md
(+56 files in other folders)
